# fty-alert-srr

./: CMakeLists.txt
packaging/debian/: changelog  control  copyright  fty-alert-srr.install
server/: CMakeLists.txt
server/src/: fty-alert-srr.cpp
server/src/alert/: rule_manager.cpp  rule_manager.h
server/src/config/: config.cpp  config.h
server/src/srr/: alert-srr.cpp
server/src/utils/: messages.cpp  messages.h  serialization.cpp  serialization.h
server/systemd/: fty-alert-srr.service  fty-alert-srr.service.in
